--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -5,11 +5,13 @@ html.html
 
     meta(charset='utf-8')
 
+    != styleTags
+
     script.
       window.__INITIAL_STATE__ = !{JSON.stringify(initialState || {})};
 
   body.body
-    != ssr
+    != svgSprite
 
     div#root!= markup
 
