--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -5,6 +5,11 @@ html.html
 
     meta(charset='utf-8')
 
+    link(
+      rel='manifest'
+      href='/manifest.webmanifest'
+    )
+
     != styleTags
 
     script.
